# redirect

./: .env  Cargo.toml
migrations/: 20231029172359_create_redirect_table.sql  20231029172359_redirect_table.sql  20231029181015_seed_redirect_table.sql  20231105101739_create_table_users.sql  20231105101747_seed_table_users.sql
src/: config.rs  database.rs  main.rs  routes.rs
src/database/: db.rs  mod.rs  redirect.rs
src/database/models/: mod.rs  redirect.rs
templates/: 404.tera.html  base.tera.html  header.tera.html
