[package]
name = "redirector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.2", features = ["mysql", "macros", "runtime-tokio", "chrono"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
chrono = { version = "0.4.31", features = ["serde"] }
hashbrown = "0.14.2"
dotenvy = "0.15.7"
bcrypt = "0.15.0"
tera = "1.19.1"
log = "0.4.20"

# Premature optimization is the root of all evil
[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
